--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,14 +1,20 @@
 body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
+  margin: 0px;
+  padding: 0px;
+  display: flex;
+  justify-content: center;
+  font-family: 'Source Code Pro', sans-serif;
+}
   
-  
+#id {
+  height: 100%;
+}
+
+header {
+  margin-top: 20px;
+  height: 50px;
+}
+
+.App {
+  flex: auto;
+}
